# rust_uci_chess_engine

./: Cargo.toml  LICENSE  README.md
src/: board.rs  main.rs
src/engine/: board.rs  mod.rs  move_generation.rs  moves.rs  piece.rs
