[package]
name = "chess"
version = "0.1.0"
authors = ["menagerm <maxence.menager@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.test]
opt-level = 3
debug = true

[profile.release]
debug = true

[profile.bench]
debug = true
